--- a/src/Contactus.css
+++ b/src/Contactus.css
@@ -37,9 +37,6 @@
     text-decoration: underline;
     text-decoration-thickness:5px;
 }
-
-
-
 .messagewrapper
 {
     position:relative;
@@ -90,4 +87,14 @@
     font-family: "Quicksand", sans-serif;
     font-weight:1000;
     font-size:50px;
+}
+.contactus
+{
+    padding-top:50px;
+}
+@media (max-width:800px){
+    .contactcontent > h1
+    {
+        font-size:80px;
+    }
 }
