--- a/src/Footer.css
+++ b/src/Footer.css
@@ -33,7 +33,6 @@
     color: #333;
     font-weight:600;
     margin-bottom:15px;
-    margin-left:20px;
 }
 .Footerpage footer .footercontainer .sec p
 {
@@ -88,4 +87,12 @@
     padding: 20px 100px 30px;
     text-align:center;
     color:#555;
+}
+.footercontainer a:hover 
+{
+    color:blue !important;
+}
+.footercontainer h2,p,a
+{
+    font-family: "Jost", sans-serif;
 }
