--- a/src/components/CollabCollege.css
+++ b/src/components/CollabCollege.css
@@ -24,3 +24,14 @@
     margin: 50px;
     width:100%;
 }
+@media (max-width:700px)
+{
+    .colleges h1
+    {
+        font-size:30px;
+    }
+    .collabcollege img{
+    height:50px;
+    width:100px;
+    }
+}
