--- a/src/components/MainHeading.css
+++ b/src/components/MainHeading.css
@@ -8,22 +8,21 @@
             -webkit-text-stroke-color: black;
     font-weight: 400;
     font-style: normal;
-    font-size: 130px;
+    font-size: 120px;
 }
 .heading img{
     float :left;
-    margin:0px 50px 0px 0px;
+    margin:0px 40px 0px 0px;
 }
 .heading p{
     clear:left;
     font-size:60px;
     font-family: "Playwrite IN", cursive;
-    padding:30px 30px 30px 0px;
+    padding-top:30px;
+    padding-bottom:70px;
 }
 .heading
 {
-    margin:20px;
-    padding:50px;
-    padding-right:0px;
-    margin-right:0px;
+    margin-top:100px;
+    padding-top:50px;
 }
